[package]
name = "dap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde-aux = "4.0.0"
serde_json = "1.0.86"
thiserror = "1.0.37"
anyhow = "*"
