[package]
name = "dap"
version = "0.4.0-alpha1"
edition = "2021"
rust-version = "1.56.0"
authors = ["Tamás Szelei <szelei.t@gmail.com>"]
description = "A Rust implementation of the Debug Adapter Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sztomi/dap-rs"
homepage = "https://github.com/sztomi/dap-rs"
readme = "../README.md"
keywords = ["debugging", "protocol", "debug", "framework"]
categories = ["development-tools::debugging"]

[lib]
doctest = false

[dependencies]
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "1.*"
fake = { version = "*", features = ["derive"], optional = true }
rand = { version = "*", optional = true }

[features]
integration_testing = ["fake", "rand"]
client = []
