[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dap = { path = "../dap" }
jsonschema = "0.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"

[build-dependencies]
quote = "1.*"
syn = { version = "2.*", features = ["full"] }
rustfmt-wrapper = "0.2.*"
